objects/LiteratureOrderItemDetail__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date
date</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <description>Disposition
char(40)</description>
        <label>Disposition</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiteratureOrderItem__c</fullName>
        <label>Literature Order Item</label>
        <referenceTo>LiteratureOrderItem__c</referenceTo>
        <relationshipLabel>Literature Order Item Details</relationshipLabel>
        <relationshipName>LiteratureOrderItemDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OrderItemDetailId__c</fullName>
        <description>OrderItemDetailId
50</description>
        <externalId>true</externalId>
        <label>Order Item Detail Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <description>Qty
number(6,0)</description>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Literature Order Item Detail</label>
    <nameField>
        <displayFormat>LOI-{0000000000}</displayFormat>
        <label>Literature Order Item Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Literature Order Item Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>